Closed Bug 1669943 Opened 4 years ago Closed 4 years ago

Crash in [@ OOM | large | mozalloc_abort | moz_xmalloc | nsTArray_base<T>::EnsureCapacity<T> | mozilla::dom::indexedDB::BackgroundRequestChild::HandleResponse]

Categories

(Core :: Storage: IndexedDB, defect)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- wontfix
firefox82 --- wontfix
firefox83 --- wontfix
firefox84 --- fixed

People

(Reporter: sg, Assigned: sg)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/adf63480-af82-4f86-af2d-b73f20201008

Top 10 frames of crashing thread:

0 mozglue.dll mozalloc_abort memory/mozalloc/mozalloc_abort.cpp:33
1 mozglue.dll mozalloc_handle_oom memory/mozalloc/mozalloc_oom.cpp:51
2 mozglue.dll moz_xmalloc memory/mozalloc/mozalloc.cpp:54
3 xul.dll nsTArray_base<nsTArrayInfallibleAllocator, nsTArray_RelocateUsingMoveConstructor<mozilla::dom::indexedDB::StructuredCloneReadInfoChild> >::EnsureCapacity<nsTArrayInfallibleAllocator> xpcom/ds/nsTArray-inl.h:162
4 xul.dll mozilla::dom::indexedDB::BackgroundRequestChild::HandleResponse dom/indexedDB/ActorsChild.cpp:2420
5 xul.dll mozilla::dom::indexedDB::BackgroundRequestChild::Recv__delete__ dom/indexedDB/ActorsChild.cpp
6 xul.dll mozilla::dom::indexedDB::PBackgroundIDBRequestChild::OnMessageReceived ipc/ipdl/PBackgroundIDBRequestChild.cpp:129
7 xul.dll mozilla::ipc::PBackgroundChild::OnMessageReceived ipc/ipdl/PBackgroundChild.cpp:6080
8 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2074
9 xul.dll mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1953
Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/625b3a0ee60c
Avoid crashing content process when failing to allocate StructuredCloneReadInfoChild array. r=dom-workers-and-storage-reviewers,asuth
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: