Bug 1669943 - Avoid crashing content process when failing to allocate StructuredCloneReadInfoChild array. r=dom-workers-and-storage-reviewers,asuth

Differential Revision: https://phabricator.services.mozilla.com/D92897